#202: Fixed spacing

--- a/website/src/common/component/input/FileSelectionBox/fileSelectionBox.css
+++ b/website/src/common/component/input/FileSelectionBox/fileSelectionBox.css
@@ -15,6 +15,7 @@
 	display: flex;
 	height: 100%;
 	justify-content: center;
+	text-align: center;
 	width: 100%;
 }
 
